--- a/app/assets/stylesheets/background_image.scss
+++ b/app/assets/stylesheets/background_image.scss
@@ -61,8 +61,41 @@
 }
 
 @media only screen and (max-width: 767px) {
+
+  #landing-page-container {
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto;
+  }
+
+  #landing-page-title {
+    grid-column: 1;
+    display: flex;
+    justify-content: center;
+  }
+
+  #landing-page-image {
+    grid-row: 2; 
+    grid-column: 1;
+    display: flex;
+    justify-content: center;
+  }
+
+  #bigDumbWebDevSVG {
+    visibility: hidden;
+    height: 35vh;
+  }
+
+  #arrow {
+    grid-row: 3; 
+    grid-column: 1;
+  }
+
+  .fa-angle-down {
+    font-size: 3em;
+  }
+
   #fade-in-big, #fade-in-dumb, #fade-in-web, #fade-in-dev {
-    font-size: 4em;
+    font-size: 1.5em;
   }
 }
 
