--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -1,7 +1,7 @@
 #projects-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 20% auto auto 20%;
+  grid-template-rows: auto auto auto 20px;
   background-color: aliceblue;
   grid-row-gap: 1em;
   place-items: center;
@@ -12,7 +12,27 @@
   font-size: 5em;
   text-align: center;
   grid-column: 1 / 4;
+  grid-row: 1;
 }
+
+.project-card {
+  display: grid;
+  grid-template-columns: 5% auto 5%;
+  grid-template-rows: 5% auto auto 5%;
+  background-color: white; // border: 1px solid black;
+  height: 100%;
+  width: 90%;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  transition: all 0.2s ease-in-out;
+}
+
+.project-card:hover {
+  transform: scale(1.05, 1.05);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
 
 .project-image {
   width: 100%;
@@ -22,40 +42,44 @@
 
 .link-image {
   place-self: center;
-}
-
-.project-card {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: auto auto;
-  background-color: white;
-  // border: 1px solid black;
-  height: 100%;
-  width: 90%;
-  border-radius: 5px;
-  background-color: #fff;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-  transition: all 0.2s ease-in-out;
-}
-
-.project-card:hover {
-  transform: scale(1.05, 1.05);
-  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  grid-column: 2;
+  grid-row: 2;
 }
 
 .image-label {
   font-family: 'Oxygen', sans-serif;
   font-size: 1.3em;
-  grid-row: 2;
+  grid-row: 3;
+  grid-column: 2;
   text-align: center;
   align-self: center;
-  margin: 0em 0.5em 0em 0.5em;
 }
 
-@media only screen and (max-width : 767px) {
+@media only screen and (max-width: 767px) {
   #projects-container {
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: auto;
+    grid-template-rows: auto 20px;
     place-items: center;
+  }
+  .project-card {
+    grid-column: 1;
+    display: grid;
+    grid-template-columns: 5% auto 5%;
+    grid-template-rows: 5% auto auto 5%;
+  }
+
+  .header {
+    grid-column: 1;
+  }
+
+  .link-image {
+    grid-column: 2;
+    grid-row: 2;
+  }
+
+  .image-label {
+    font-size: 1.2em;
+    grid-column: 2;
+    grid-row: 3;
   }
 }
